[gd_scene load_steps=40 format=2]

[ext_resource path="res://Entity/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Fierce Tooth/02-Run/Run 01.png" type="Texture" id=2]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Fierce Tooth/09-Dead Hit/Dead Hit 01.png" type="Texture" id=3]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Fierce Tooth/01-Idle/Idle 06.png" type="Texture" id=4]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Fierce Tooth/01-Idle/Idle 03.png" type="Texture" id=5]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Fierce Tooth/02-Run/Run 02.png" type="Texture" id=6]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Fierce Tooth/01-Idle/Idle 02.png" type="Texture" id=7]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Fierce Tooth/02-Run/Run 04.png" type="Texture" id=8]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Fierce Tooth/02-Run/Run 03.png" type="Texture" id=9]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Fierce Tooth/02-Run/Run 06.png" type="Texture" id=10]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Fierce Tooth/08-Hit/Hit 02.png" type="Texture" id=11]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Fierce Tooth/08-Hit/Hit 01.png" type="Texture" id=12]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Fierce Tooth/01-Idle/Idle 01.png" type="Texture" id=13]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Fierce Tooth/01-Idle/Idle 04.png" type="Texture" id=14]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Fierce Tooth/01-Idle/Idle 07.png" type="Texture" id=15]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Fierce Tooth/01-Idle/Idle 05.png" type="Texture" id=16]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Fierce Tooth/08-Hit/Hit 04.png" type="Texture" id=17]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Fierce Tooth/01-Idle/Idle 08.png" type="Texture" id=18]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Fierce Tooth/02-Run/Run 05.png" type="Texture" id=19]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Fierce Tooth/08-Hit/Hit 03.png" type="Texture" id=20]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Fierce Tooth/10-Dead Ground/Dead Ground 04.png" type="Texture" id=21]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Fierce Tooth/10-Dead Ground/Dead Ground 02.png" type="Texture" id=22]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Fierce Tooth/09-Dead Hit/Dead Hit 04.png" type="Texture" id=23]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Fierce Tooth/09-Dead Hit/Dead Hit 02.png" type="Texture" id=24]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Fierce Tooth/10-Dead Ground/Dead Ground 01.png" type="Texture" id=25]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Fierce Tooth/09-Dead Hit/Dead Hit 03.png" type="Texture" id=26]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Fierce Tooth/10-Dead Ground/Dead Ground 03.png" type="Texture" id=27]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Fierce Tooth/06-Anticipation/Anticipation 01.png" type="Texture" id=28]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Fierce Tooth/06-Anticipation/Anticipation 02.png" type="Texture" id=29]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Fierce Tooth/06-Anticipation/Anticipation 03.png" type="Texture" id=30]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Fierce Tooth/07-Attack/Attack 02.png" type="Texture" id=31]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Fierce Tooth/07-Attack/Attack 03.png" type="Texture" id=32]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Fierce Tooth/07-Attack/Attack 01.png" type="Texture" id=33]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Fierce Tooth/07-Attack/Attack 04.png" type="Texture" id=34]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Fierce Tooth/07-Attack/Attack 05.png" type="Texture" id=35]
[ext_resource path="res://Entity/Shark.gd" type="Script" id=36]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 4 ), ExtResource( 15 ), ExtResource( 18 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ) ],
"loop": false,
"name": "ready",
"speed": 10.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 19 ), ExtResource( 10 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 22 ), ExtResource( 27 ), ExtResource( 21 ) ],
"loop": false,
"name": "dead",
"speed": 10.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 24 ), ExtResource( 26 ), ExtResource( 23 ) ],
"loop": false,
"name": "hurt_dead",
"speed": 10.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 11 ), ExtResource( 20 ), ExtResource( 17 ) ],
"loop": false,
"name": "hurt",
"speed": 10.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 34 ), ExtResource( 35 ) ],
"loop": false,
"name": "attack",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.6888, 9.98932 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14.0528, 11.5608 )

[node name="Shark" instance=ExtResource( 1 )]
script = ExtResource( 36 )

[node name="AnimatedSprite" parent="." index="0"]
frames = SubResource( 1 )
animation = "idle"
frame = 0

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 0.943871, 1.00052 )
shape = SubResource( 2 )

[node name="CollisionShape2D" parent="Attack" index="0"]
position = Vector2( -14.2799, -1.63383 )
shape = SubResource( 3 )

[node name="JumpTimer" type="Timer" parent="." index="6"]
wait_time = 0.35

[node name="AttackCooldown" type="Timer" parent="." index="7"]
wait_time = 3.0

[node name="DetectPlayer" parent="." index="8"]
cast_to = Vector2( 0, 120 )

[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
